force-app/main/default/objects/candidate__c/candidate__c.object-meta.xml
<CustomObject>
    <label>candidate</label>
    <nameField>
        <displayFormat>c-{0000}</displayFormat>
        <label>candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>