force-app/main/default/objects/candidate__c/fields/batch_load_item__c.field-meta.xml
<CustomField>
    <fullName>batch_load_item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>batch load item</label>
    <type>Checkbox</type>
</CustomField>