force-app/main/default/objects/candidate__c/fields/drivers_license_number__c.field-meta.xml
<CustomField>
    <fullName>drivers_license_number__c</fullName>
    <label>drivers license number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>