force-app/main/default/objects/candidate__c/fields/education__c.field-meta.xml
<CustomField>
    <fullName>education__c</fullName>
    <label>education</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GE/HA\S DIPLOMA</fullName>
            </value>
            <value>
                <fullName>BA/BS</fullName>
            </value>
            <value>
                <fullName>MA/MS/MBA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>JD</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
            <value>
                <fullName>POST DOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>