force-app/main/default/objects/candidate__c/fields/picture_id__c.field-meta.xml
<CustomField>
    <fullName>picture_id__c</fullName>
    <label>picture id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>