force-app/main/default/objects/candidate__c/fields/picture_link__c.field-meta.xml
<CustomField>
    <fullName>picture_link__c</fullName>
    <formula>picture_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>picture link</label>
    <type>Text</type>
</CustomField>