force-app/main/default/objects/candidate__c/fields/social_security_number__c.field-meta.xml
<CustomField>
    <fullName>social_security_number__c</fullName>
    <label>social security number</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>