force-app/main/default/objects/candidate__c/fields/state_province__c.field-meta.xml
<CustomField>
    <fullName>state_province__c</fullName>
    <label>state/province</label>
    <length>30</length>
    <type>Text</type>
</CustomField>