force-app/main/default/objects/candidate__c/fields/street_address_1__c.field-meta.xml
<CustomField>
    <fullName>street_address_1__c</fullName>
    <label>street address 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>