force-app/main/default/objects/candidate__c/fields/tags__c.field-meta.xml
<CustomField>
    <fullName>tags__c</fullName>
    <label>tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>