force-app/main/default/objects/candidate__c/fields/us_citizen__c.field-meta.xml
<CustomField>
    <fullName>us_citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>us citizen</label>
    <type>Checkbox</type>
</CustomField>