force-app/main/default/objects/candidate__c/fields/visa_required__c.field-meta.xml
<CustomField>
    <fullName>visa_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>visa required</label>
    <type>Checkbox</type>
</CustomField>