force-app/main/default/objects/candidate__c/fields/years_of_experience__c.field-meta.xml
<CustomField>
    <fullName>years_of_experience__c</fullName>
    <label>years of experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>