force-app/main/default/objects/candidate__c/fields/zip_postal_code__c.field-meta.xml
<CustomField>
    <fullName>zip_postal_code__c</fullName>
    <label>zip/postal code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>